<resources>
    <string name="app_name">ChatApp</string>
    <string name="chat_app_start">Welcome to WeChat App</string>
    <string name="need_a_new_account">Need A New Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="account_setting">Account Settings</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="login_your_email">Your Email</string>
    <string name="login_pwd">password</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_image">change image</string>
    <string name="change_status">change Status</string>
    <string name="defualt_status">Hi there I am using Chat App</string>

</resources>
