<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.hp.chatapp.Activity.SettingActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_circle_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/defaultuser" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting_display_name"
        android:text="@string/display_name"
        android:layout_below="@+id/setting_circle_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="#ffffff"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting_status"
        android:text="@string/defualt_status"
        android:layout_below="@+id/setting_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#ffffff"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/setting_change_image"
        android:layout_above="@+id/setting_change_status"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_btn"
        android:text="@string/change_image"
        android:backgroundTint="#ffffff"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/setting_change_status"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_btn"
        android:text="@string/change_status"
        android:backgroundTint="@color/colorAccent"
        android:textColor="#ffffff"
        android:textStyle="bold"
        />

</RelativeLayout>
